issue #32 - add new logo and nav title - test new color theme

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -3,3 +3,11 @@
     background-repeat: no-repeat;
     background-size:cover;
   }
+  
+.text-header {
+  color: #cb6;
+}
+
+.text-subheader {
+  color: #feb;
+}
