--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,7 +7,13 @@
 .text-header {
   color: #cb6;
 }
-
 .text-subheader {
   color: #feb;
+}
+
+.block-darker {
+  background-color: #240c00;
+}
+.block-lighter {
+  background-color: #482a1a;
 }
