--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -38,3 +38,14 @@ body {
   display: inline-block;
   padding: 20px;
 }
+
+#related .doc {
+  display: inline-block;
+  vertical-align: top;
+  width: 280px;
+  height: 145px;
+  margin: 10px;
+  padding: 15px;
+  background: #482a1a;
+  color: #feb;
+}
