--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -49,3 +49,15 @@ body {
   background: #482a1a;
   color: #feb;
 }
+
+.provision p {
+  text-indent: 3em;
+  line-height: 2em;
+  margin-bottom: 0.8em;
+}
+.provision u {
+  color: #12ad75;
+}
+.provision strike {
+  color: #ff5151;
+}
