#110 show non resolution meeting in section page

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -54,6 +54,10 @@ body {
   color: #feb;
 }
 
+#section .discussionist > .comma:last-child {
+  display: none;
+}
+
 .accordion-collapsed .accordion-collapsable {
   display: none;
 }
