#127 reduce main page background image file size

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,7 +7,7 @@ body {
 }
 
 .main-bg {
-  background-image: url('../images/mainmenu.png');
+  background-image: url('../images/mainmenu.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center top;
