#issue 154 - change resolution field in section page to rendered as html - change css styling on resolution field - fix json data in chapter 3 section 25 which in wrong formatting

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -65,6 +65,13 @@ body {
   transform: rotate(180deg); 
 }
 
+#section-info p {
+  margin-bottom: 0.8em;
+}
+#section-info p:last-child {
+  margin-bottom: 0em;
+}
+
 .provision p {
   text-indent: 3em;
   line-height: 2em;
