add truncate and read more
add truncate and read more in Issues for Consideration section, section will truncate after 501 character (approximately 7 lines)

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -84,6 +84,19 @@ body {
   color: #ff5151;
 }
 
+.truncate-7 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 7;
+  -webkit-box-orient: vertical;
+}
+
+.expanded {
+  /* Remove truncation styles */
+  -webkit-line-clamp: initial;
+  max-height: none;
+}
+
 #truehits_div {
   position: absolute;
   left: -9999px;
