--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -88,3 +88,31 @@ body {
   position: absolute;
   left: -9999px;
 }
+
+#react-paginate ul {
+  display: inline-block;
+  margin-left: 20px;
+  padding-left: 0;
+}
+
+#react-paginate li {
+  display: inline-block;
+  border: 1px solid rgb(224, 224, 224);
+  color: #fff;
+  cursor: pointer;
+  margin-right: 4px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+
+#react-paginate li a {
+    padding: 2px 10px;
+    display: inline-block;
+    color: #fff;
+    outline: none;
+}
+
+#react-paginate li.active {
+  background: rgb(224, 224, 224);
+  outline: none;
+}
