--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -10,7 +10,7 @@ body {
   background-image: url('../images/mainmenu.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center top;
+  background-position: center bottom;
 }
   
 .text-header {
